  // Cold Store Management System - Prisma Schema
  // Database: SQLite
  // ORM: Prisma

  generator client {
    provider = "prisma-client-js"
  }

  generator dbml {
    provider = "prisma-dbml-generator"
  }

  datasource db {
    provider = "sqlite"
    url      = env("DATABASE_URL")
  }

  // Customer Model
  model Customer {
    id        Int      @id @default(autoincrement())
    name      String
    fatherName String?
    phone     String?
    address   String?
    village   String?
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt

    entryReceipts     EntryReceipt[]
    clearanceReceipts ClearanceReceipt[]
    ledger            Ledger[]
    cashBookEntries   CashBookEntry[]

    @@index([name])
    // CNIC was removed (no longer stored)
    @@index([phone])
  }

  // Product Type Model (e.g., Potato, Onion, Garlic)
  model ProductType {
    id                    Int      @id @default(autoincrement())
    name                  String   @unique
    doubleRentAfter30Days Boolean  @default(false) // Enable double rent pricing after 33 days
    createdAt             DateTime @default(now())
    updatedAt             DateTime @updatedAt

    subTypes   ProductSubType[]
    entryItems EntryItem[]
  }

  // Product SubType Model (e.g., Cardinal, Red, White)
  model ProductSubType {
    id            Int      @id @default(autoincrement())
    productTypeId Int
    name          String
    createdAt     DateTime @default(now())
    updatedAt     DateTime @updatedAt

    productType ProductType @relation(fields: [productTypeId], references: [id], onDelete: Cascade)
    entryItems  EntryItem[]

    @@unique([productTypeId, name])
    @@index([productTypeId])
  }

  // Room Model
  model Room {
    id        Int      @id @default(autoincrement())
    name      String   @unique
    type      String   // 'COLD' or 'HOT'
    isActive  Boolean  @default(true)
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt

    entryItems EntryItem[]
  }

  // Pack Type Model (Bori, Jali)
  model PackType {
    id        Int      @id @default(autoincrement())
    name      String   @unique
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt

    entryItems EntryItem[]
  }

  // Entry Receipt Model
  model EntryReceipt {
    id              Int      @id @default(autoincrement())
    receiptNo       String   // Format: CS-YYYYMMDD-XXXX (allows duplicates)
    customerId      Int
    carNo           String
    entryDate       DateTime @default(now())
    totalAmount     Float    // Sum of all items (including KJ)
    description     String?
    createdAt       DateTime @default(now())
    updatedAt       DateTime @updatedAt

    customer    Customer    @relation(fields: [customerId], references: [id], onDelete: Cascade)
    items       EntryItem[]
    ledgerEntries Ledger[]

    @@index([customerId])
    @@index([receiptNo])
    @@index([entryDate])
  }

  // Entry Item Model
  model EntryItem {
    id                Int      @id @default(autoincrement())
    entryReceiptId    Int
    productTypeId     Int
    productSubTypeId  Int?
    packTypeId        Int
    roomId            Int
    boxNo             String?
    marka             String?  // Marking/label
    quantity          Float    // Initial quantity
    remainingQuantity Float    // Tracks partial clearances
    unitPrice         Float
    totalPrice        Float    // quantity × unitPrice
    
    // Khali Jali (Empty Crate) fields
    hasKhaliJali       Boolean  @default(false)
    kjQuantity         Float?   // Initial KJ quantity
    remainingKjQuantity Float?   // Tracks remaining KJ after partial clearances
    kjUnitPrice        Float?
    kjTotal            Float?   // kjQuantity × kjUnitPrice
    isDoubled          Boolean  @default(false)
    
    grandTotal        Float    // totalPrice + kjTotal
    createdAt         DateTime @default(now())
    updatedAt         DateTime @updatedAt

    entryReceipt   EntryReceipt     @relation(fields: [entryReceiptId], references: [id], onDelete: Cascade)
    productType    ProductType      @relation(fields: [productTypeId], references: [id], onDelete: Cascade)
    productSubType ProductSubType?  @relation(fields: [productSubTypeId], references: [id], onDelete: Cascade)
    packType       PackType         @relation(fields: [packTypeId], references: [id], onDelete: Cascade)
    room           Room             @relation(fields: [roomId], references: [id], onDelete: Cascade)
    clearedItems   ClearedItem[]

    @@index([entryReceiptId])
    @@index([productTypeId])
    @@index([roomId])
  }

  // Clearance Receipt Model
  model ClearanceReceipt {
    id              Int      @id @default(autoincrement())
    clearanceNo     String   // Format: CL-YYYYMMDD-XXXX (allows duplicates)
    customerId      Int
    carNo           String?
    clearanceDate   DateTime @default(now())
    totalAmount     Float    // Sum of all cleared items totalAmount
    description     String?
    createdAt       DateTime @default(now())
    updatedAt       DateTime @updatedAt
    creditAmount    Float?
    discount        Float  @default(0)

    customer       Customer      @relation(fields: [customerId], references: [id], onDelete: Cascade)
    clearedItems   ClearedItem[]
    ledgerEntries  Ledger[]

    @@index([customerId])
    @@index([clearanceNo])
    @@index([clearanceDate])
  }

  // Cleared Item Model
  model ClearedItem {
    id                  Int      @id @default(autoincrement())
    clearanceReceiptId  Int
    entryReceiptId      Int      // Reference to entry receipt for tracking
    entryItemId         Int
    clearQuantity       Float    // Quantity being cleared (must be <= entryItem.remainingQuantity)
    clearKjQuantity     Float?   // Khali Jali quantity cleared (must be <= entryItem.kjQuantity)
    totalAmount         Float    // (EntryItem.unitPrice * clearQuantity) + (clearKjQuantity * kjUnitPrice)
    createdAt           DateTime @default(now())
    updatedAt           DateTime @updatedAt

    clearanceReceipt ClearanceReceipt @relation(fields: [clearanceReceiptId], references: [id], onDelete: Cascade)
    entryItem        EntryItem        @relation(fields: [entryItemId], references: [id], onDelete: Cascade)

    @@index([clearanceReceiptId])
    @@index([entryReceiptId])
    @@index([entryItemId])
  }

  // Ledger Model - Simplified Credit System
  model Ledger {
    id                 Int      @id @default(autoincrement())
    customerId         Int
    type               String   // Type of transaction: "adding_inventory", "clearance", "direct_cash"
    entryReceiptId     Int?     // Reference to EntryReceipt for adding_inventory type
    clearanceReceiptId Int?     // Reference to ClearanceReceipt for clearance type
    description        String   // e.g., "Payment", "Rent Charged", "Discount Given", "Cash Advance"
    debitAmount        Float    @default(0) // Amount customer owes
    creditAmount       Float    @default(0) // Amount customer paid
    isDiscount         Boolean  @default(false) // True when this entry is a discount
    isDirectCash       Boolean  @default(false) // True for loan transactions (not counted in profit/loss)
    createdAt          DateTime @default(now())
    updatedAt          DateTime @updatedAt

    customer          Customer          @relation(fields: [customerId], references: [id], onDelete: Cascade)
    entryReceipt      EntryReceipt?     @relation(fields: [entryReceiptId], references: [id], onDelete: Cascade)
    clearanceReceipt  ClearanceReceipt? @relation(fields: [clearanceReceiptId], references: [id], onDelete: Cascade)

    @@index([customerId])
    @@index([createdAt])
    @@index([entryReceiptId])
    @@index([clearanceReceiptId])
    @@index([type])
  }

  // Expense Category Model
  model ExpenseCategory {
    id          Int      @id @default(autoincrement())
    name        String   @unique
    description String?
    isActive    Boolean  @default(true)
    createdAt   DateTime @default(now())
    updatedAt   DateTime @updatedAt

    expenses Expense[]

    @@index([name])
  }

  // Expense Model
  model Expense {
    id          Int             @id @default(autoincrement())
    date        DateTime        @default(now())
    categoryId  Int
    amount      Float
    description String?
    createdAt   DateTime        @default(now())
    updatedAt   DateTime        @updatedAt

    category ExpenseCategory @relation(fields: [categoryId], references: [id], onDelete: Cascade)

    @@index([categoryId])
    @@index([date])
  }

  // Settings Model - Key-Value pairs for system configuration
  model Setting {
    id        Int      @id @default(autoincrement())
    key       String   @unique
    value     String
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt

    @@index([key])
  }

  // Cash Book Entry Model - Tracks all cash transactions
  model CashBookEntry {
    id                Int      @id @default(autoincrement())
    date              DateTime @default(now())
    transactionType   String   // 'inflow' or 'outflow'
    amount            Float
    description       String
    source            String   // 'clearance', 'ledger', 'expense', 'manual'
    referenceId       Int?     // ID of source transaction (clearanceId, ledgerId, expenseId)
    referenceType     String?  // Type of reference ('clearance_receipt', 'ledger_entry', 'expense')
    customerId        Int?     // Optional customer reference
    isDirectCash      Boolean  @default(false) // True for loan transactions (not counted in profit/loss)
    createdBy         String?  // User who created manual entries
    createdAt         DateTime @default(now())
    updatedAt         DateTime @updatedAt

    customer          Customer? @relation(fields: [customerId], references: [id])

    @@index([date])
    @@index([transactionType])
    @@index([source])
    @@index([referenceId, referenceType])
  }

  // Daily Cash Summary Model - Tracks daily cash balances
  model DailyCashSummary {
    id              Int      @id @default(autoincrement())
    date            DateTime @unique
    openingBalance  Float    @default(0)
    totalInflows    Float    @default(0)
    totalOutflows   Float    @default(0)
    closingBalance  Float    @default(0)
    isReconciled    Boolean  @default(false)
    reconciledBy    String?
    reconciledAt    DateTime?
    createdAt       DateTime @default(now())
    updatedAt       DateTime @updatedAt

    auditTrail      OpeningBalanceAudit[]

    @@index([date])
  }

  // Opening Balance Audit Trail Model - Tracks changes to opening balances
  model OpeningBalanceAudit {
    id                    Int      @id @default(autoincrement())
    dailyCashSummaryId    Int
    oldOpeningBalance     Float
    newOpeningBalance     Float
    changeReason          String?
    changedBy             String?
    changeTimestamp       DateTime @default(now())

    dailyCashSummary      DailyCashSummary @relation(fields: [dailyCashSummaryId], references: [id], onDelete: Cascade)

    @@index([dailyCashSummaryId])
    @@index([changeTimestamp])
  }

