//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Customer {
  id Int [pk, increment]
  name String [not null]
  fatherName String
  phone String
  address String
  village String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  entryReceipts EntryReceipt [not null]
  clearanceReceipts ClearanceReceipt [not null]
  ledger Ledger [not null]
  cashBookEntries CashBookEntry [not null]
}

Table ProductType {
  id Int [pk, increment]
  name String [unique, not null]
  doubleRentAfter30Days Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  subTypes ProductSubType [not null]
  entryItems EntryItem [not null]
}

Table ProductSubType {
  id Int [pk, increment]
  productTypeId Int [not null]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  productType ProductType [not null]
  entryItems EntryItem [not null]

  indexes {
    (productTypeId, name) [unique]
  }
}

Table Room {
  id Int [pk, increment]
  name String [unique, not null]
  type String [not null]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  entryItems EntryItem [not null]
}

Table PackType {
  id Int [pk, increment]
  name String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  entryItems EntryItem [not null]
}

Table EntryReceipt {
  id Int [pk, increment]
  receiptNo String [not null]
  customerId Int [not null]
  carNo String [not null]
  entryDate DateTime [default: `now()`, not null]
  totalAmount Float [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  customer Customer [not null]
  items EntryItem [not null]
  ledgerEntries Ledger [not null]
}

Table EntryItem {
  id Int [pk, increment]
  entryReceiptId Int [not null]
  productTypeId Int [not null]
  productSubTypeId Int
  packTypeId Int [not null]
  roomId Int [not null]
  boxNo String
  marka String
  quantity Float [not null]
  remainingQuantity Float [not null]
  unitPrice Float [not null]
  totalPrice Float [not null]
  hasKhaliJali Boolean [not null, default: false]
  kjQuantity Float
  remainingKjQuantity Float
  kjUnitPrice Float
  kjTotal Float
  isDoubled Boolean [not null, default: false]
  grandTotal Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  entryReceipt EntryReceipt [not null]
  productType ProductType [not null]
  productSubType ProductSubType
  packType PackType [not null]
  room Room [not null]
  clearedItems ClearedItem [not null]
}

Table ClearanceReceipt {
  id Int [pk, increment]
  clearanceNo String [not null]
  customerId Int [not null]
  carNo String
  clearanceDate DateTime [default: `now()`, not null]
  totalAmount Float [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  creditAmount Float
  discount Float [not null, default: 0]
  customer Customer [not null]
  clearedItems ClearedItem [not null]
  ledgerEntries Ledger [not null]
}

Table ClearedItem {
  id Int [pk, increment]
  clearanceReceiptId Int [not null]
  entryReceiptId Int [not null]
  entryItemId Int [not null]
  clearQuantity Float [not null]
  clearKjQuantity Float
  totalAmount Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  clearanceReceipt ClearanceReceipt [not null]
  entryItem EntryItem [not null]
}

Table Ledger {
  id Int [pk, increment]
  customerId Int [not null]
  type String [not null]
  entryReceiptId Int
  clearanceReceiptId Int
  description String [not null]
  debitAmount Float [not null, default: 0]
  creditAmount Float [not null, default: 0]
  isDiscount Boolean [not null, default: false]
  isDirectCash Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  customer Customer [not null]
  entryReceipt EntryReceipt
  clearanceReceipt ClearanceReceipt
}

Table ExpenseCategory {
  id Int [pk, increment]
  name String [unique, not null]
  description String
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  expenses Expense [not null]
}

Table Expense {
  id Int [pk, increment]
  date DateTime [default: `now()`, not null]
  categoryId Int [not null]
  amount Float [not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  category ExpenseCategory [not null]
}

Table Setting {
  id Int [pk, increment]
  key String [unique, not null]
  value String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table CashBookEntry {
  id Int [pk, increment]
  date DateTime [default: `now()`, not null]
  transactionType String [not null]
  amount Float [not null]
  description String [not null]
  source String [not null]
  referenceId Int
  referenceType String
  customerId Int
  isDirectCash Boolean [not null, default: false]
  createdBy String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  customer Customer
}

Table DailyCashSummary {
  id Int [pk, increment]
  date DateTime [unique, not null]
  openingBalance Float [not null, default: 0]
  totalInflows Float [not null, default: 0]
  totalOutflows Float [not null, default: 0]
  closingBalance Float [not null, default: 0]
  isReconciled Boolean [not null, default: false]
  reconciledBy String
  reconciledAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  auditTrail OpeningBalanceAudit [not null]
}

Table OpeningBalanceAudit {
  id Int [pk, increment]
  dailyCashSummaryId Int [not null]
  oldOpeningBalance Float [not null]
  newOpeningBalance Float [not null]
  changeReason String
  changedBy String
  changeTimestamp DateTime [default: `now()`, not null]
  dailyCashSummary DailyCashSummary [not null]
}

Ref: ProductSubType.productTypeId > ProductType.id [delete: Cascade]

Ref: EntryReceipt.customerId > Customer.id [delete: Cascade]

Ref: EntryItem.entryReceiptId > EntryReceipt.id [delete: Cascade]

Ref: EntryItem.productTypeId > ProductType.id [delete: Cascade]

Ref: EntryItem.productSubTypeId > ProductSubType.id [delete: Cascade]

Ref: EntryItem.packTypeId > PackType.id [delete: Cascade]

Ref: EntryItem.roomId > Room.id [delete: Cascade]

Ref: ClearanceReceipt.customerId > Customer.id [delete: Cascade]

Ref: ClearedItem.clearanceReceiptId > ClearanceReceipt.id [delete: Cascade]

Ref: ClearedItem.entryItemId > EntryItem.id [delete: Cascade]

Ref: Ledger.customerId > Customer.id [delete: Cascade]

Ref: Ledger.entryReceiptId > EntryReceipt.id [delete: Cascade]

Ref: Ledger.clearanceReceiptId > ClearanceReceipt.id [delete: Cascade]

Ref: Expense.categoryId > ExpenseCategory.id [delete: Cascade]

Ref: CashBookEntry.customerId > Customer.id

Ref: OpeningBalanceAudit.dailyCashSummaryId > DailyCashSummary.id [delete: Cascade]